2010-08-20  Andreas Schwab  <schwab@linux-m68k.org>

	* image.c (imagemagick_clear_image): Remove debugging output.

2010-08-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* cmds.c (Vself_insert_face, Vself_insert_face_command): Remove.
	(Qpost_self_insert_hook, Vpost_self_insert_hook): New vars.
	(internal_self_insert): Run Qpost_self_insert_hook rather than handle
	self-insert-face.
	(syms_of_cmds): Initialize the new vars.

2010-08-19  Jason Rumney  <jasonr@gnu.org>

	* w32menu.c (set_frame_menubar): Remove call to undefined function.

	* w32fns.c (w32_wnd_proc): Don't check context before initializing.

2010-08-19  Jan Djärv  <jan.h.d@swipnet.se>

	* nsselect.m (nxatoms_of_nsselect): Use "Selection" and "Secondary".

2010-08-18  Eli Zaretskii  <eliz@gnu.org>

	* xterm.c (x_draw_bar_cursor):
	* w32term.c (x_draw_bar_cursor): If the character under cursor is
	R2L, draw the bar cursor on its right rather than on its left.

2010-08-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* eval.c (Fdefmacro): Only obey one declaration.

	* casefiddle.c (casify_region): Setup gl_state.

2010-08-18  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (ns_define_frame_cursor): Call x_update_cursor (Bug#6868).

2010-08-18  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (update_frame_tool_bar): Literal stings are const char*.

2010-08-18  David De La Harpe Golden  <david@harpegolden.net>

	* nsselect.m (QCLIPBOARD, NXPrimaryPboard): Define.
	(symbol_to_nsstring): Map QCLIPBOARD => NSGeneralPboard,
	QPRIMARY => NXPrimaryPboard.
	(ns_string_to_symbol): NSGeneralPboard => QCLIPBOARD,
	NXPrimaryPboard => QPRIMARY.
	(nxatoms_of_nsselect): NXPrimaryPboard = PrimarySelection,
	NXSecondaryPboard = SecondarySelection.
	(syms_of_nsselect): Intern QCLIPBOARD (Bug#6677).

2010-08-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gtkutil.c (update_frame_tool_bar): Don't assume TOOL_BAR_ITEM_LABEL
	is a string.

2010-08-17  Jan Djärv  <jan.h.d@swipnet.se>
