@@ -1,3 +1,9 @@
+2010-08-20  Eli Zaretskii  <eliz@gnu.org>
+
+	* dispnew.c (buffer_posn_from_coords): Fix calculation of buffer
+	position for R2L lines by mirroring the pixel position wrt the
+	text are box.  Improve commentary.
+
 2010-08-20  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* image.c (imagemagick_clear_image): Remove debugging output.
